# Slang

./: .gitignore  LICENSE  README.md  bytecode.md
compiler/: .gitignore  README.md  bytecode.py  chain.py  claims.py  compiler.py  emitter.py  header.py  input.slg  interpreter.py  mypy.sh  opcodes.json  opcodes.py  parser.py  slbparser.py  typesys.py  util.py
compiler/stdlib/: build_stdlib.sh
compiler/stdlib/src/: stdlib.internal.json  stdlib.slg
compiler/test/: all.fish
compiler/test/kitchen-sink/: expected.slb  input.slg  output.tmp  test.fish
compiler/test/long/: expected.slb  input.slg  output.tmp  test.fish
interpreter/: README.md  meson.build  todo.md
interpreter/include/: bytecode.h  common.h  interpreter.h  interpreter_export.h  nativelibs.h  opcodes.h  slbstdlib.h  typesys.h
interpreter/rtlib/: rtlib.c
interpreter/src/: bytecode.c  classes.c  common.c  garbagecollector.c  interpreter.c  main.c  nativelibs.c  staticvars.c  typesys.c
test/: .gitignore  test_aot_interpreter.py  test_claims.py  test_compiler.py  util.py
test/resources/abstract_classes/: basic.slg  dont_override_abstract_method.slg  instantiate_abstract_class.slg  supercall_to_abstract_method.slg
test/resources/arrays/: basic.slg  literal_inference_inheritance.slg  literla_of_nulls.slg  misc.slg  no_such_member_type.slg  out_of_bounds.slg  test_2d.slg  zerofill.slg
test/resources/classes_basic/: class.slg  class_call.slg  class_new_primitive_type.slg  class_new_unknown_type.slg  class_nullptr.slg  class_property_access.slg  class_property_access_advanced.slg  (+2 more)
(+122 files in other folders)
